calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/CalloutEngineSetting__mdt.object-meta.xml
<CustomObject>
    <label>Callout Engine Setting</label>
    <pluralLabel>Callout Engine Settings</pluralLabel>
</CustomObject>