calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/AccessTokenId__c.field-meta.xml
<CustomField>
    <fullName>AccessTokenId__c</fullName>
    <label>Access Token Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>