calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/AccessTokenInBaseResponse__c.field-meta.xml
<CustomField>
    <fullName>AccessTokenInBaseResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Token in base response?</label>
    <type>Checkbox</type>
</CustomField>