calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/APIKeyHeaderName__c.field-meta.xml
<CustomField>
    <fullName>APIKeyHeaderName__c</fullName>
    <defaultValue>&quot;api_key&quot;</defaultValue>
    <label>APIKey: Header Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>