calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/APIKeyToken__c.field-meta.xml
<CustomField>
    <fullName>APIKeyToken__c</fullName>
    <label>API Key: Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>