calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/APIKeyTokenPlacement__c.field-meta.xml
<CustomField>
    <fullName>APIKeyTokenPlacement__c</fullName>
    <label>API Key: Token Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Endpoint</fullName>
                <default>true</default>
                <label>Endpoint</label>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>