calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/AuthenticationType__c.field-meta.xml
<CustomField>
    <fullName>AuthenticationType__c</fullName>
    <label>Auth Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>API Key</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Bearer</fullName>
            </value>
            <value>
                <fullName>OAuth</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Override</fullName>
                <isActive>false</isActive>
                <label>Override</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>