calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/BasicPassword__c.field-meta.xml
<CustomField>
    <fullName>BasicPassword__c</fullName>
    <label>Basic: Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>