calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/BasicToken__c.field-meta.xml
<CustomField>
    <fullName>BasicToken__c</fullName>
    <label>Basic: Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>