calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/BasicUsername__c.field-meta.xml
<CustomField>
    <fullName>BasicUsername__c</fullName>
    <label>Basic: Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>