calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/BearerToken__c.field-meta.xml
<CustomField>
    <fullName>BearerToken__c</fullName>
    <label>Bearer: Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>