calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/CalloutType__c.field-meta.xml
<CustomField>
    <fullName>CalloutType__c</fullName>
    <label>CalloutType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard APEX</fullName>
                <default>true</default>
                <label>Standard APEX</label>
            </value>
            <value>
                <fullName>Named Credential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>