calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/DefaultBody__c.field-meta.xml
<CustomField>
    <fullName>DefaultBody__c</fullName>
    <label>Default Body</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>