calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/DefaultHeaders__c.field-meta.xml
<CustomField>
    <fullName>DefaultHeaders__c</fullName>
    <inlineHelpText>JSON based header definition.</inlineHelpText>
    <label>Default Headers</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>