calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/DefaultParameters__c.field-meta.xml
<CustomField>
    <fullName>DefaultParameters__c</fullName>
    <inlineHelpText>JSON based URL parameters</inlineHelpText>
    <label>Default Parameters</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>