calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <inlineHelpText>For parametarized URL, use the format &lt;parameterName&gt;</inlineHelpText>
    <label>Endpoint</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>