calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>Use this field to sort or filter and group endpoints together</inlineHelpText>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>