calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/NamedCredentialName__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentialName__c</fullName>
    <inlineHelpText>Api name of the Named credential to be used</inlineHelpText>
    <label>Named Credential: Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>