calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/NamedCredentialPath__c.field-meta.xml
<CustomField>
    <fullName>NamedCredentialPath__c</fullName>
    <inlineHelpText>Path to use for the Named credential callout</inlineHelpText>
    <label>Named Credential: Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>