calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/OAuth_Id__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Id__c</fullName>
    <label>OAuth: Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>