calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/OAuthAuthorizationType__c.field-meta.xml
<CustomField>
    <fullName>OAuthAuthorizationType__c</fullName>
    <label>OAuth: Authorization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
                <default>true</default>
                <label>Simple</label>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Bearer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>