calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/OAuthEndpoint__c.field-meta.xml
<CustomField>
    <fullName>OAuthEndpoint__c</fullName>
    <label>OAuth: Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>