calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/OAuthGrantType__c.field-meta.xml
<CustomField>
    <fullName>OAuthGrantType__c</fullName>
    <label>OAuth: Grant Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>