calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/OAuthKey__c.field-meta.xml
<CustomField>
    <fullName>OAuthKey__c</fullName>
    <label>OAuth: Client Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>