calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/OAuthMethod__c.field-meta.xml
<CustomField>
    <fullName>OAuthMethod__c</fullName>
    <label>OAuth: Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>