calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/OAuthSecret__c.field-meta.xml
<CustomField>
    <fullName>OAuthSecret__c</fullName>
    <label>OAuth: Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>