calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/RecordLogging__c.field-meta.xml
<CustomField>
    <fullName>RecordLogging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Logs callout results into the Callout Log sObject. Checking this field will automatically log failed callouts.To log success callouts, use the method logSuccess().</inlineHelpText>
    <label>Record Logging</label>
    <type>Checkbox</type>
</CustomField>