calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <defaultValue>3</defaultValue>
    <inlineHelpText>The retry callout is run on a Queueable interface. Setting this to a high number may cause your code to hit APEX limitations. It is recommended to set this to a maximum of 2 retries.</inlineHelpText>
    <label>Retry Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>