calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/RetryOnFail__c.field-meta.xml
<CustomField>
    <fullName>RetryOnFail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry on Fail</label>
    <type>Checkbox</type>
</CustomField>