calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/RetryResponseHandler__c.field-meta.xml
<CustomField>
    <fullName>RetryResponseHandler__c</fullName>
    <inlineHelpText>Apex class that implements the Interface CalloutHandler.CalloutResponseHandler. this will handle the response when called via the retry functionality in a Queueable state</inlineHelpText>
    <label>Retry Response Handler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>