calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/SimpleToken__c.field-meta.xml
<CustomField>
    <fullName>SimpleToken__c</fullName>
    <label>Simple: Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>