calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/fields/TestMockReturn__c.field-meta.xml
<CustomField>
    <fullName>TestMockReturn__c</fullName>
    <inlineHelpText>Return data used for the test class Mock Callout</inlineHelpText>
    <label>Test: Mock Return</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>