calloutEngine/force-app/main/default/objects/CalloutEngineSetting__mdt/validationRules/LoggingNotOn.validationRule-meta.xml
<ValidationRule>
    <fullName>LoggingNotOn</fullName>
    <active>true</active>
    <errorConditionFormula>RetryOnFail__c &amp;&amp; !RecordLogging__c</errorConditionFormula>
    <errorDisplayField>RecordLogging__c</errorDisplayField>
    <errorMessage>Record logging needs to be turned on to enable Retry on Failures</errorMessage>
</ValidationRule>